# Fractals

./: .gitignore  .gitmodules  LICENSE  formulae.tex  fractals.go
C++/: CMakeLists.txt  bench.cpp  fractals.cpp  fractals.hpp
C++/cmake/: FindSDL2.cmake
Crystal/: fractals.cr
Go/: fractals.go
Nim/: fractals.nim
